# zero2prod

./: Cargo.toml  README.md  rustfmt.toml
scripts/: postgres_docker_compose.yaml
src/: configuration.rs  startup.rs
src/routes/: mod.rs
tests/: health_check.rs
