[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Ian Teda <ian@teda.id.au"]

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name`field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
actix-http = "3"
serde = { version = "1", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
actix-rt = "2.9.0"
reqwest = "0.11.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
